<resources>
    <string name="app_name">Scheduler</string>
    <string name="username_register_key">com.example.a2340project.USERNAME_REGISTER_KEY</string>
    <!-- Strings used for fragments for navigation -->
    <string name="classes_fragment_label">Classes</string>
    <string name="todo_fragment_label">To-do</string>
    <string name="task_editor_fragment_label">Edit task</string>
    <string name="login_fragment_label">Log In</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="second_fragment_label">To-do</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nav_drawer_user_text">Welcome</string>
    <string name="settings_button_text">Settings</string>
    <string name="sw_user_button_text">Switch user</string>
    <string name="todo_list_nav_button_text">To-do</string>
    <string name="classes_nav_button_text">Classes</string>
    <string name="sort_by_classes_item_text">Class</string>
    <string name="sort_by_due_date_item_text">Due date</string>
    <string name="sort_by_completion_item_text">Completion</string>
    <string name="sort_by_menu_button_text">Sort by</string>
    <string name="show_completed_button_text">Show completed</string>
    <string name="show_incompleted_button_text">Show incomplete</string>
    <string name="action_edit_classes_text">Edit class</string>
    <string name="action_back_to_classes_text">Back</string>
    <string name="meeting_time_descriptor">Meeting Schedule</string>
    <string name="course_editing_fragment_label">Edit course</string>
    <string name="add_class_title">Add class</string>
    <string name="confirm_class_title">Confirm class</string>
    <string name="delete_class_title">Delete class</string>
    <string name="completed_text">Completed</string>
    <string name="add_datetime_button_text">+ Add a meeting time</string>
    <string name="meeting_time_title_text">Meeting times</string>
    <string name="class_name_title_text">Course name</string>
    <string name="section_name_title_text">Section</string>
    <string name="class_instructor_title_text">Instructor</string>
    <string name="class_location_title_text">Location</string>
    <string name="class_name_input_hint">e.g., CS 2340</string>
    <string name="section_name_input_hint">e.g., A01</string>
    <string name="class_instructor_input_hint">e.g., Feijoo Garcia</string>
    <string name="class_location_input_hint">e.g., IC 103</string>
    <string name="duration_input_hint">e.g., 75</string>
    <string name="duration_title_text">Class duration (minutes)</string>
    <string name="time_input_hint">e.g., 2:00</string>
    <string name="time_title_text">Class time</string>
    <string name="remove_time_button_text">Remove</string>
    <string name="day_title_text">Day of week</string>
    <string name="action_back_to_class_from_editor_text">Back to classes</string>
    <string name="action_back_to_tasks_from_details">Back to tasks</string>
    <string name="action_delete_task_title">Delete task</string>
    <string name="action_edit_task_title">Edit task</string>
    <string name="action_back_to_tasks_from_editor_title">Back to tasks</string>
    <string name="action_confirm_task_title">Confirm task</string>
    <string name="task_name_title_text">Task name</string>
    <string name="task_name_input_hint">e.g., Do laundry</string>
    <string name="task_type_title_text">Task type</string>
    <string name="task_course_title_text">Task associated course</string>
    <string name="task_due_date_title_text">Due date</string>
    <string name="task_due_date_button_text">Set due date/time</string>
    <string name="task_description_title_text">Task description</string>
    <string name="task_description_hint">e.g., Go to laundry room and do laundry</string>
    <string name="login_title_text">Welcome</string>
    <string name="login_username_hint">Username</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="settings_fragment_text_view_string">Receive notifications before tasks by:</string>
    <string name="login_subtitle_text">Log in or register an account</string>
    <string name="login_activity_label">Login page</string>
</resources>