<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.a2340project.MainActivity" >
    <item
        android:id="@+id/action_add_task"
        android:title="@string/action_edit_classes_text"
        android:icon="@drawable/add_icon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_class"
        android:title="@string/add_class_title"
        android:icon="@drawable/add_icon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit_class"
        android:title="@string/action_edit_classes_text"
        android:icon="@drawable/edit_icon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete_class"
        android:title="@string/delete_class_title"
        android:icon="@drawable/delete_icon"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_confirm_class"
        android:title="@string/confirm_class_title"
        android:icon="@drawable/done_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_back_to_classes_from_editor"
        android:title="@string/action_back_to_class_from_editor_text"
        android:icon="@drawable/close_icon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_back_to_classes_from_details"
        android:title="@string/action_back_to_classes_text"
        android:icon="@drawable/close_icon"
        app:showAsAction="always" />
</menu>