<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/task_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/task_name_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/task_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/task_name_input_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/task_name_title"
            app:layout_constraintTop_toBottomOf="@id/task_name_title" />

        <TextView
            android:id="@+id/task_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/task_type_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/task_name_input"
            app:layout_constraintTop_toBottomOf="@id/task_name_input"/>

        <Spinner
            android:id="@+id/task_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/task_type_title"
            app:layout_constraintStart_toStartOf="@id/task_type_title"/>

        <TextView
            android:id="@+id/task_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/task_description_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/task_type_spinner"
            app:layout_constraintTop_toBottomOf="@id/task_type_spinner"/>

        <EditText
            android:id="@+id/task_description_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/task_description_title"
            app:layout_constraintTop_toBottomOf="@id/task_description_title" />

        <TextView
            android:id="@+id/task_due_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/task_due_date_title_text"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/task_description_input"
            app:layout_constraintStart_toStartOf="@+id/task_description_input"/>

        <Button
            android:id="@+id/task_due_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_due_date_button_text"
            app:layout_constraintTop_toBottomOf="@+id/task_due_date_title"
            app:layout_constraintStart_toStartOf="@id/task_due_date_title"/>

        <TextView
            android:id="@+id/task_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/task_course_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/task_due_date_button"
            app:layout_constraintTop_toBottomOf="@id/task_due_date_button" />

        <Spinner
            android:id="@+id/task_course_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@id/task_course_title"
            app:layout_constraintTop_toBottomOf="@id/task_course_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>