<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/class_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/class_name_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/class_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/class_name_input_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/class_name_title" />

        <TextView
            android:id="@+id/section_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/section_name_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/class_name_input" />

        <EditText
            android:id="@+id/section_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/section_name_input_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/section_name_title" />

        <TextView
            android:id="@+id/class_instructor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/class_instructor_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/section_name_input" />

        <EditText
            android:id="@+id/class_instructor_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/class_instructor_input_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/class_instructor_title" />

        <TextView
            android:id="@+id/class_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/class_location_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/class_instructor_input" />

        <EditText
            android:id="@+id/class_location_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:ems="10"
            android:hint="@string/class_location_input_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/class_name_title"
            app:layout_constraintTop_toBottomOf="@id/class_location_title" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_location_input" />

        <TextView
            android:id="@+id/meeting_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/meeting_time_title_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/add_datetime_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/add_datetime_button_text"
            android:textSize="14sp"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@id/meeting_time_title"
            app:layout_constraintStart_toStartOf="@id/meeting_time_title" />

        <LinearLayout
            android:id="@+id/datetime_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_datetime_button">

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>