<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/nav_top_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/classes_nav_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nav_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/nav_drawer_user_text"
            android:textAlignment="center"
            android:textSize="44sp" />
    </FrameLayout>

    <Button
        android:id="@+id/classes_nav_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/baseline_calendar_today_black_24dp"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/classes_nav_button_text"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_top_frame" />

    <Button
        android:id="@+id/todo_list_nav_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/baseline_view_list_black_24dp"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/todo_list_nav_button_text"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/classes_nav_button"
        app:layout_constraintTop_toBottomOf="@+id/classes_nav_button" />

    <Button
        android:id="@+id/sw_user_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/baseline_manage_accounts_black_24dp"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sw_user_button_text"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/classes_nav_button" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/baseline_settings_black_24dp"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/settings_button_text"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sw_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/classes_nav_button" />
</androidx.constraintlayout.widget.ConstraintLayout>