<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoFragment">

    <Button
        android:id="@+id/sort_by_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/filter_list_icon"
        android:drawablePadding="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/sort_by_menu_button_text"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/todo_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/show_completed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/show_completed_button_text"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/show_incompleted_button"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/show_incompleted_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:minHeight="48dp"
        android:text="@string/show_incompleted_button_text"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/show_completed_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_button" />
</androidx.constraintlayout.widget.ConstraintLayout>